Fix blurry image problem

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -52,8 +52,8 @@ body { padding-top: 60px; }
   }
   .media {
     float: left;
-    width: 565px;
-    height: 325px;
+    //width: 565px;
+    //height: 325px;
   }
 }
 
